--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+download.htm
+Fiona-1.7.0-cp35-cp35m-win_amd64.whl
+*.whl
+kd_nn.py
+*.gz
+pyshp-1.2.10/.travis.yml
+pyshp-1.2.10/build/lib/shapefile.py
